Closed
Bug 245434
Opened 21 years ago
Closed 21 years ago
text is hidden when nested tables are used
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: spam, Assigned: bernd_mozilla)
References
()
Details
(Keywords: testcase)
Attachments
(4 files)
|
344 bytes,
text/html
|
Details | |
|
554 bytes,
text/html
|
Details | |
|
879 bytes,
patch
|
Details | Diff | Splinter Review | |
|
879 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040514 MultiZilla/1.6.3.0e
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040514 MultiZilla/1.6.3.0e
The following HTML is viewable in mozilla 1.6 and IE, but not 1.7rc2
<TABLE height=100%>
<TR>
<td valign=top>
<TABLE width=100% height=100%>
</table>
<table width="768">
<tr>
<td>
<TR><td>test</td></tr>
</td>
</tr>
</table>
</td>
</tr>
</table>
Reproducible: Always
Steps to Reproduce:
1. Put code shown above into html file and view in mozilla
2. or visit http://urgo.org/moz17error.html
Actual Results:
in mozilla 1.7 you get a blank screen.. if you use the search feature you can
see that the text "test" is on the page but hidden under another table.
Expected Results:
In IE and older versions of mozilla, and firefox you get a blank page with just
test at the top of the screen.
Oh, as a further note this was discovered as people using ModernBill are unable
to see client info as the table structure is a more complex version of the
example code.
For modernbill users here is a thread talking about the problem:
http://www.modernsupport.com/modernbill/forums/showthread.php?p=104955
(sorry its passworded for only modernbill users)
Comment 2•21 years ago
|
||
Well, if you add properly the <tr><td></td></tr> tags in the first table, you
don't get to see any text inside any of the browsers (IE, Opera and Mozilla).
I think the other two browsers are doing something different (not good) when
they only see <table></table>.
I've attached reporter's testcase, but with 1px red borders.
See first paragraph of this:
http://www.w3.org/TR/CSS21/tables.html#height-layout
I think this describes the testcase. It seems like user agents may do what they
like in this case.
Well, I would like it more when Mozilla provided a scrolling mechanism in this
case, or even better imho, when the containing table would grow to the
combining height of the two nested tables.
Comment 3•21 years ago
|
||
Empty tables don't have a size in other browsers (and in old Mozilla versions).
Which is pretty incorrect...
We may add a quirk for this
Depends on: 240148
Comment 4•21 years ago
|
||
To be honest, I think the current behaviour is fine. I believe IE has got this
wrong, as the only other interpretation that seems reasonable to me is for the
second inner table to push out below the 100% height boundary, i.e. causing the
window to scroll. But then the outer table would exceed 100% ...
As CSS 2.1 remains quiet (aka "undefined") on this particular scenario, I
suggest keeping the current behaviour until the standard actually has something
to say on the matter, then we align with the standard.
Comment 5•21 years ago
|
||
Comment 6•21 years ago
|
||
-> Tables
Assignee: parser → nobody
Component: HTML: Parser → Layout: Tables
OS: Windows XP → All
QA Contact: core.layout.tables
Comment 7•21 years ago
|
||
*** Bug 261724 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•21 years ago
|
||
Comment on attachment 160672 [details] [diff] [review]
patch
David, I would like to enable showing the clipped overflow in strict mode to
see whether we can remove this alltogether. IE differs in this situation also
between quirks and standards mode.
Attachment #160672 -
Flags: superreview?(dbaron)
Attachment #160672 -
Flags: review?(dbaron)
Comment on attachment 160672 [details] [diff] [review]
patch
It might be a little more logical (especially given the name of
HasPctOverHeight) to do the quirks mode check at the getter rather than the
setter (i.e., check in nsTableCellFrame::Paint, by adding an &&
eCompatibility_NavQuirks==compatMode with appropriate parentheses). But either
way is ok with me.
Attachment #160672 -
Flags: superreview?(dbaron)
Attachment #160672 -
Flags: superreview+
Attachment #160672 -
Flags: review?(dbaron)
Attachment #160672 -
Flags: review+
| Assignee | ||
Comment 12•21 years ago
|
||
The text will be hidden in quirks mode that is similiar to IE, in standards mode
we show the text, but do not expand the table (which IE does, but thats incorrect)
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•