hide the overflow that results from overconstrained percentage heights inside table cell frames only in quirks mode, bug 245434 r/sr=dbaron